message ReplicaInfo {
  required int32 node_id = 1;
  required int32 replica_id = 3;
}
